# molvizpy

./: .README.md.swp  .copier-answers.yml  LICENSE  README.md  Untitled.ipynb  app.py  env.yml  env_Axel.yml  fcts_cls(1).ipynb  fcts_cls.ipynb  methionine.sdf  molecules.json  molvizpy.py  molvizpy.yml  notebook_fonctions.ipynb  protein_viewer.ipynb  pyproject.toml  setup.py  test.sdf  tests.ipynb  tests.py  tests2.py
.ipynb_checkpoints/: README-checkpoint.md  fcts_cls(1)-checkpoint.ipynb  fcts_cls-checkpoint.ipynb  notebook_fonctions-checkpoint.ipynb
3Dfiles/: (2S)-2-amino-4-[[(2S,3S,4R,5R)-5-(6-aminopurin-9-yl)-3,4-dihydroxyoxolan-2-yl]methyl-methylsulfonio]butanoate.sdf  (2S)-2-amino-4-methylsulfanylbutanoic acid.sdf  (4aR,5aS,8aR,13aS,15aS,15bR)-4a,5,5a,7,8,13a,15,15a,15b,16-decahydro-2H-4,6-methanoindolo[3,2,1-ij]oxepino[2,3,4-de]pyrrolo[2,3-h]quinolin-14-one.sdf  1.sdf  104752.sdf  123324.sdf  123591.sdf  136090.sdf  13625.sdf  13668965.sdf  13725.sdf  15448870.sdf  17358.sdf  2-(2-methoxyethoxy)ethanol.sdf  2-(2-methoxyethoxy)ethanol.txt  281.sdf  28557.sdf  297.sdf  34755.sdf  6137.sdf  6326.sdf  66348.sdf  702.sdf  7611.sdf  7628.sdf  9088.sdf  9321.sdf  962.sdf  C(=O)=O.sdf  C.sdf  C1=CC=CC=C1  .sdf  C1=CC=CC=C1.sdf  C1C=CC=CC=1.sdf  C1CN2CC3=CCO[C@H]4CC(=O)N5[C@H]6[C@H]4[C@H]3C[C@H]2[C@@]61C7=CC=CC=C75.sdf  C=1CCCCC1.sdf  C=C.CC.CC.sdf  C=C.sdf  CC(C(C(=O)NC(Cc1ccccc1)C(=O)OC)NC(=O)C(Cc2ccccc2)NC(=O)CCCNC(=N)N)O.sdf  CC(C)(C=NOC(=O)NC)S(=O)(=O)C.sdf  CC(O)C.sdf  (+35 more)
3Dfiles/.ipynb_checkpoints/: 2-(2-methoxyethoxy)ethanol-checkpoint.xyz
molvizpy/: molvizpy.py  tox.ini
molvizpy/3Dfiles/: benzene.sdf  ethanol.sdf
notebooks/: notebook_fonctions.ipynb
src/molvizpy/: __init__.py
(+4 files in other folders)
